@@ -27,10 +27,11 @@
     (-) Code (option-switchable) which tests for highest possible game speed
         at given frame rate
 
-======== Code ==========================================================
-
 (-) RubyCampaign: boat isn't deep below the viking and moves at the same 
     speed as he.
+    (problem with RelativeRect and Rect v.2)
+
+======== Code ==========================================================
 
 (-) Fix BottomPanel
     (-) select box can blink in trash (it may be solved by creating
