@@ -1,3 +1,8 @@
+[12.December 2008]
+- viking.rb, monstermixins.rb:
+  'a.XX_on_rect(r).each {}' replaced by 'a.XX_on_rect(r) {}' (less iterations -
+  new feature of SchwerEngine::Group)
+
 [11.December 2008]
 - trying to solve problem with exitting from Ladder testing level I looked 
   at code of class Exit, added width and height (so that exit area is not
